2008-06-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): TIP #280 conditional
	  feature. Added checks to validate HashEntry and HashTable
	  information gotten from Command structures. This seems to be
	  needed to handle structures managed by Itcl.

2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		add complete deps on tclDTrace.h.

	* unix/Makefile.in:		clean generated tclDTrace.h file.
	* unix/configure.in (SunOS): 	fix static DTrace-enabled build.

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.13

2008-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test (io-53.9): need to close chan before removing file.

2008-05-23  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinChan.c (FileWideSeekProc): Accepted a patch by
	  Alexandre Ferrieux <ferrieux@users.sourceforge.net> to fix the
	  [Bug 1965787]. 'tell' now works for locations > 2 GB as well
	  instead of going negative.

	* generic/tclIO.c (Tcl_SetChannelBufferSize): Accepted a patch by
	* tests/io.test:  Alexandre Ferrieux <ferrieux@users.sourceforge.net>
	  to fix the [Bug 1969953]. Buffersize outside of the supported
	  range are now clipped to nearest boundary instead of ignored.

2008-04-26  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclAsync.c: Tcl_AsyncDelete(): panic if attempt
      	to locate handler token fails. Happens when some other
	thread attempts to delete somebody else's token. 

	Also, panic early if we find out the wrong thread attempting
	to delete the async handler (common trap). As, only the one
	that created the handler is allowed to delete it.

2008-04-17  Andreas Kupries  <andreask@activestate.com>

	*** 8.4.19 TAGGED FOR RELEASE ***

	* generic/tclCompExpr.c (CompileMathFuncCall): Added
	* tests/compExpr.test (compExpr-5.10): Tcl_ResetResult before
	appending error message, to clear out possible sharing. Added test