@@ -1,3 +1,13 @@
+2008-06-16  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclCmdIL.c (InfoFrameCmd): Backport of fix made on the
+	* tests/info.test: head branch :: Moved the code looking up the
+	information for key 'proc' out of the TCL_LOCATION_BC branch to
+	after the switch, this is common to all frame types. Updated the
+	testsuite to match. This was exposed by the 2008-06-08 commit
+	(Miguel), switching uplevel from direct eval to compilation. Fixes
+	[Bug 1987851].
+
 2008-06-12  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclCmdIL.c (InfoFrameCmd): TIP #280 conditional
